--- a/style.css
+++ b/style.css
@@ -2,16 +2,21 @@
 :root {
   --primary-color: #ff6b81;
   --primary-hv-color: #ed6176;
+  --white-color:#fff;
   --secondary-color: #080809;
   --email-color: #394653;
 }
 *{
   list-style: none;
+  overflow-x: hidden; 
 }
 body {
   font-family: "Inter", sans-serif;
 }
-
+.text-primary {
+  --bs-text-opacity: 1;
+  color: var(--primary-color)!important;
+}
 .nav-link {
   font-weight: 700 !important;
   padding: 1.3rem !important;
@@ -36,13 +41,19 @@ body {
   --bs-btn-disabled-bg: var(--primary-color);
   --bs-btn-disabled-border-color: var(--primary-color);
 }
-
+.accordion-button:not(.collapsed) {
+  color: white;
+  background-color: var(--primary-color);
+  box-shadow: inset 0 calc(-1 * var(--bs-accordion-border-width)) 0 var(--bs-accordion-border-color);
+}
 .btn-outline-primary {
   --bs-gradient: none;
   --bs-btn-border-color: white;
   --bs-btn-hover-border-color: white;
 }
-
+.accordion-button.collapsed::after {
+  border: #fff;
+}
 .btn-light {
   color: var(--primary-color) !important;
 }
@@ -50,4 +61,7 @@ body {
 .bg-primary {
   background-color: var(--primary-color) !important;
   color: white;
+}
+footer{
+  background-color:#081828 ;
 }
